# typoratio

./: CMakeLists.txt  README  typoratio.c
